# WhisperLiveKit

./: .env.example  .gitignore  .gitmodules  =0.27.0  AGENTS.md  AGILE_PLAN.md  API_REFERENCE.md  BENCHMARK.md  BILLING.md  CUDA_FIXES_SUMMARY.md  DEPLOY.md  Dockerfile  Dockerfile.api  Dockerfile.cpu  Dockerfile.gpu  Dockerfile.gpu.fixed  Dockerfile.test  FINANCE.md  GPU_SETUP_GUIDE.md  JARVISLAB_AGENTS.md  LICENSE  Makefile  NOTICE.md  ONBOARDING.md  README.md  SECURITY.md  TEST_PLAN_ANDROID_ALPHA.md  benchmark_mlx_simul.py  compose.yml  docker-compose.prod.yml  pyproject.toml  requirements.txt  requirements_runtime.txt  run_benchmark.py  run_client.py  test_backend_offline.py
experiments/qwen3-causal/: .gitignore  README.md  README_WLK_IMPORT.md  ROADMAP_VOXTRAL_PARITY.md  RUNS.md  pyproject.toml
experiments/qwen3-causal/configs/: jarvislab.env.example  qwen3_asr_h100.yaml
experiments/qwen3-causal/data/: wlk_first20_uploaded_manifest.jsonl  wlk_first20_uploaded_manifest.summary.json  wlk_uploaded_full_manifest.jsonl
experiments/qwen3-causal/figs/: causal_streaming.tex  offline_vs_causal.tex  plot_training_curves.py
experiments/qwen3-causal/qwen3_streaming/: __init__.py  audio_io.py  cached_full_hypothesis.py  ctc.py  decoder_ce.py  gate.py  lora.py  metrics.py  native_realtime_model.py  prefix_manifest.py  realtime.py  realtime_config.py  realtime_features.py  realtime_targets.py  rnnt.py  tower_distill.py
experiments/qwen3-causal/runs/: qwen_ar_context_distill_stageA_wlk_first20_left4_seg200.jsonl  qwen_ar_context_distill_stageA_wlk_first20_left6_seg200.jsonl  (+15 more)
(+656 files in other folders)
