[project]
name = "qwen3-asr-streaming-h100"
version = "0.1.0"
description = "GPU-first Qwen3-ASR streaming experiments for vLLM and H100 training."
requires-python = ">=3.10"
dependencies = [
    "datasets>=2.19.0",
    "jiwer>=3.0.4",
    "librosa>=0.10.2",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "pyyaml>=6.0.1",
    "requests>=2.31.0",
    "soundfile>=0.12.1",
    "tqdm>=4.66.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]
gpu = ["qwen-asr", "vllm[audio]"]
realtime = ["torch>=2.3.0", "transformers>=4.45.0", "accelerate>=0.33.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["qwen3_streaming*"]
